<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MobiBloggerActivity!</string>
    <string name="app_name">MobiBlogger</string>
    <string name="strAddPhoto">Add Photo</string>

    <string name="distance_prompt">Choose a planet</string>
    <string-array name="distances_array">
        <item>1km</item>
        <item>3km</item>
        <item>5km</item>
        <item>10km</item>
    </string-array>
        <string name="register">Register</string>
        <string name="login">Login</string>
        <string name="loginTwitter">Twitter Login</string>
        <string name="nickname">Nickname</string>
        <string name="email">Email</string>
        <string name="password">Password</string>
        <string name="cancel">Cancel</string>
        <string name="logout">Logout</string>
        <string name="priv">Private</string>
    
</resources>